--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,78 @@
 .alert {
   padding: 7px;
 }
+
+.topbar {
+  position: static;
+}
+
+.navbar {
+    margin-bottom: 0px;
+}
+
+.property-image-list img {
+    max-width: 100%;
+    width: 100%;
+    height: 250px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 3px solid #EEE;
+    border-radius: 8px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s
+}
+
+.form-control:focus {
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(102,175,233,0.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(102,175,233,0.6)
+}
+
+.pgTitle {
+    font-weight: 200;
+    margin-bottom: 12px;
+    font-family: 'Open Sans Light', sans-serif;
+    font-size: 28px;
+    letter-spacing: -1px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+
+.inner_container {
+    margin: 25px 0px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: #fff;
+    border-style: solid;
+    border-width: 6px;
+    border-color: #E5E5E5;
+    border-radius: 18px
+}
+
+.radio input[type="radio"],
+.radio-inline input[type="radio"],
+.checkbox input[type="checkbox"],
+.checkbox-inline input[type="checkbox"] {
+     margin-left: 0;
+ }
+
+
+.inner_container{
+  margin-top: 0;
+  a {
+    line-height: 2.5;
+  }
+}
