--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Sign up</h2>
-
+<div class="inner_container">
+    <h2 class="pgTitle">Sign up</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -37,8 +37,9 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", class: "btn btn-success btn-block btn-lg" %>
+    <%= f.submit "Sign up", class: "btn btn-success" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
