--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,14 @@
-
+<div class="row">
+  <div class="col-md-6 col-sm-12 col-xs-12 text-center">
+    <h2>Space Renters</h2>
+    <p>Discover available storage spaces in your area.</p>
+    <a href="/list_view" class="btn btn-success btn-lg">Rent Now</a>
+  </div>
+  <div class="col-md-6 col-sm-12 col-xs-12 text-center">
+    <h2>Space Host</h2>
+    <p>Promote and Lease your available spaces to rent.</p>
+    <a href="/space_listings/new" class="btn btn-success btn-lg">Lease Now</a>
+  </div>
+</div>
 
 <%= render "shared/service" %>
