--- a/app/views/layouts/_autoform.html.erb
+++ b/app/views/layouts/_autoform.html.erb
@@ -1,4 +1,5 @@
 <div id="locationField" class="form-group">
+  <h2> Address</h2>
     <label for="autocomplete">Search</label>
     <input id="autocomplete" class="form-control" placeholder="Enter your address" onfocus="geolocate()" type="text"></input>
 </div>
