--- a/app/views/bookings/your_bookings.html.erb
+++ b/app/views/bookings/your_bookings.html.erb
@@ -1,6 +1,3 @@
-<br>
-<br>
-<br>
 <div class="row" ng-app="app">
   <div ng-controller="bookingCtrl" ng-init="your_bookings_setup()">
     <div class="row">
@@ -16,6 +13,7 @@
       </div>
       <div class="col-md-9">
         <h1>Your Bookings</h1>
+        <% if @space_listing %>
         <table class="table">
           <tr>
             <th><a href="#" ng-click="toggleOrder('title')">Title</a></th>
@@ -48,6 +46,9 @@
             </td>
           </tr>
         </table>
+        <% else %>
+        <p> No request from your space listings.</p>
+        <% end %>
       </div>
     </div>
   </div>
