--- a/app/views/bookings/your_rented_spaces.html.erb
+++ b/app/views/bookings/your_rented_spaces.html.erb
@@ -1,6 +1,3 @@
-<br>
-<br>
-<br>
 <div class="row" ng-app="app">
   <div ng-controller="bookingCtrl" ng-init="your_rented_spaces_setup()">
     <div class="row">
@@ -16,6 +13,7 @@
       </div>
       <div class="col-md-9">
         <h1>Your Rented Spaces</h1>
+        <% if @rented_spaces %>
         <table class="table">
           <tr>
             <th><a href="#" ng-click="toggleOrder('move_in')">Move In</a></th>
@@ -32,6 +30,9 @@
             <td>{{ rented_space.host }}</td>
           </tr>
         </table>
+        <% else %>
+        <p> You did not book any spaces yet.</p>
+        <% end %>
       </div>
     </div>
   </div>
