--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,10 +18,20 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><%= link_to "Home", root_path %></li>
         <% if current_user %>
-          <li><%= link_to "Booking Request", "/booking_request" %></li>
-          <li><%= link_to "View all Listings", space_listings_path %></li>
-          <li><%= link_to "New Listing", new_space_listing_path %></li>
-          <li><%= link_to 'Dashboard', "#", :class => "signin" %></li>
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Listings <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "View Listings", space_listings_path %></li>
+                <li><%= link_to "Add Listing", new_space_listing_path %></li>
+              </ul>
+          </li>
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookings <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Your Bookings", your_bookings_path %></li>
+                <li><%= link_to "Your Rented Spaces", your_rented_spaces_path %></li>
+              </ul>
+          </li>
           <li><%= link_to 'Sign out', destroy_user_session_path, :class => "signup", method: :delete %></li>
         <% else %>
           <li><%= link_to 'Sign in', new_user_session_path, :class => "signin" %></li>
