--- a/app/views/space_listings/new.html.erb
+++ b/app/views/space_listings/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Space Listing</h1>
+<div class="inner_container">
+  <h1>New Space Listing</h1>
 
-<%= render "layouts/forms" %>
+  <%= render "layouts/forms" %>
 
-<%= link_to 'Back', space_listings_path %>
+  <%= link_to 'Back', space_listings_path %>
+</div>
