--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
-  <div class="col-md-6 col-sm-12 col-xs-12 text-center">
+  <div class="col-md-6 col-sm-12 col-xs-12 text-center card card-1">
     <h2>Space Renters</h2>
-    <p>Discover available storage spaces in your area.</p>
-    <a href="/list_view" class="btn btn-success btn-lg">Rent Now</a>
+    <p>DISCOVER AVAILABLE STORAGE SPACES IN YOUR AREA.</p>
+    <a href="/list_view" class="btn btn-success btn-lg">RENT NOW</a>
   </div>
-  <div class="col-md-6 col-sm-12 col-xs-12 text-center">
+  <div class="col-md-6 col-sm-12 col-xs-12 text-center card card-1">
     <h2>Space Host</h2>
-    <p>Promote and Lease your available spaces to rent.</p>
-    <a href="/space_listings/new" class="btn btn-success btn-lg">Lease Now</a>
+    <p>PROMOTE AND LEASE YOUR AVAILABLE SPACES TO RENT.</p>
+    <a href="/space_listings/new" class="btn btn-success btn-lg">LEASE NOW</a>
   </div>
 </div>
 
