Styling the views

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
-<br><br><br>
-
-<div class="row">
+<div id="content">
+  <div class="container">
+    <div class="row">
 
 <h1>Booking Space</h1>
 
@@ -44,4 +44,6 @@
   </div>
 <% end %>
 
+</div>
+</div>
 </div>
