--- a/app/views/bookings/your_rented_spaces.html.erb
+++ b/app/views/bookings/your_rented_spaces.html.erb
@@ -1,4 +1,6 @@
-<div class="row" ng-app="app">
+<div id="content">
+  <div class="container">
+  <div class="row" ng-app="app">
   <div ng-controller="bookingCtrl" ng-init="your_rented_spaces_setup()">
     <div class="row">
       <div class="col-md-3">
@@ -36,4 +38,6 @@
       </div>
     </div>
   </div>
+</div>
+</div>
 </div>
