--- a/app/views/space_listings/index.html.erb
+++ b/app/views/space_listings/index.html.erb
@@ -1,4 +1,6 @@
-<div class="row">
+<div id="content">
+  <div class="container">
+  <div class="row">
   <!-- begin:article -->
   <div class="col-md-9 col-md-push-3">
     <div class="row">
@@ -57,3 +59,5 @@ function initializeMap() {
   }
 }
 </script>
+</div>
+</div>
