--- a/app/views/space_listings/list_view.html.erb
+++ b/app/views/space_listings/list_view.html.erb
@@ -1,4 +1,6 @@
-<div ng-app="app">
+<div id="content">
+  <div class="container">
+  <div ng-app="app">
   <div ng-controller="spaceListingCtrl" ng-init="setup()">
     <!-- begin:article -->
     <div class="col-md-9 col-md-push-3">
@@ -108,3 +110,5 @@
       <!-- end:sidebar -->
     </div>
   </div>
+</div>
+</div>
