--- a/app/views/space_listings/new.html.erb
+++ b/app/views/space_listings/new.html.erb
@@ -1,7 +1,11 @@
-<div class="inner_container">
+<div id="content">
+  <div class="container">
+  <div class="inner_container">
   <h1>New Space Listing</h1>
 
   <%= render "layouts/forms" %>
 
   <%= link_to 'Back', space_listings_path %>
+</div>
+</div>
 </div>
