--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,12 @@
-<br><br><br>
-
-<div class="row">
+<div id="content">
+  <div class="container">
+    <div class="row">
 
 <h1>Booking Space Show Page</h1>
 
   <p>Your booking is now pending and host needs to approve your request.</p>
 
   <%= link_to "View all bookings", bookings_path %>
+</div>
+</div>
 </div>
