--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/autocomplete" %>
+
 <div class="row">
   <div class="col-md-6 col-sm-12 col-xs-12 text-center card card-1">
     <h2>Space Renters</h2>
