--- a/app/views/shared/_autocomplete.html.erb
+++ b/app/views/shared/_autocomplete.html.erb
@@ -1,36 +1,11 @@
-<script src="http://maps.googleapis.com/maps/api/js?key=<%=ENV[" google_api_key"] %>&libraries=places" type="text/javascript"></script>
-<script type="text/javascript">
-    function initialize() {
-        var input = document.getElementById('searchTextField');
-        var autocomplete = new google.maps.places.Autocomplete(input);
-        google.maps.event.addListener(autocomplete, 'place_changed', function () {
-            var place = autocomplete.getPlace();
-            document.getElementById('city2').value = place.name;
-            document.getElementById('cityLat').value = place.geometry.location.lat();
-            document.getElementById('cityLng').value = place.geometry.location.lng();
-        });
-    }
-    google.maps.event.addDomListener(window, 'load', initialize);
-</script>
-<div class="box-all">
-  <div class="col-md-8 col-md-offset-2">
-    <div class="intro-messagex">
-        <div class="row list-inline intro-social-buttons get_started_ulx">
-          <div class="col-xs-12">
-            <div class="form-group fixed-input-group">
-              <span class="icon"><i class="fa fa-search text-muted"></i></span>
-              <div class="input-group input-group-home">
-                <input id="searchTextField" type="text" class="form-control input-lg geocomplete" placeholder="Where do you need space?" autocomplete="off">
-                <span class="input-group-btn">
-                  <button class="btn btn-warning btn-lg search-space-btn request_btn" data-type="space">Search</button>
-                </span>
-              </div>
-              <input type="hidden" id="city2">
-              <input type="hidden" id="cityLat">
-              <input type="hidden" id="cityLng">
-            </div>
-          </div>
-        </div>
+<div class="col-md-8 col-md-offset-2">
+  <h2>Where do you need space? </h2>
+  <div class="form-group">
+    <div class="input-group">
+      <input id="searchTextField" type="text" class="form-control" placeholder="Enter your Zipcode" autocomplete="off">
+      <span class="input-group-btn">
+        <button class="btn-sm btn-danger">Search</button>
+      </span>
     </div>
   </div>
 </div>
