sidebar and sort

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to root_path, :class => "navbar-brand" do  %>
-          <p class="logo">Better-Space</p>
+          <p class="logo">BetterSpace</p>
       <% end %>
     </div>
 
