--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="widget">
-          <h2>Better-Space</h2>
+          <h3>BetterSpace</h3>
           <address>
             <strong>Real Space Listing</strong><br>
             100 Main Street, San Francico CA<br>
