Add style to new bookings

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,49 +1,47 @@
 <div id="content">
   <div class="container">
     <div class="row">
-
-<h1>Booking Space</h1>
-
-<%= form_for @booking do |f| %>
-  <div class="row">
-    <div class="col-md-3 col-xs-6">
-      <%= f.label :move_in, "Move In" %>
-      <div class="input-group date mg-check-in focus">
-        <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-        <%= f.text_field :move_in, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
+      <div class="inner_container">
+        <h2>Booking Space</h2>
+        <%= form_for @booking do |f| %>
+        <div class="row center">
+          <div class="col-md-6 col-xs-6">
+            <%= f.label :move_in, "Move In" %>
+            <div class="input-group date mg-check-in focus">
+              <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
+              <%= f.text_field :move_in, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
+            </div>
+          </div>
+          <div class="col-md-6 col-xs-6">
+            <%= f.label :move_out, "Move Out" %>
+            <div class="input-group date mg-check-in focus">
+              <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
+              <%= f.text_field :move_out, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6 col-xs-6">
+            <% if @space_listing %>
+            <label>Day rent: </label><span id="day_rent"> <%= number_to_currency @space_listing.day_rent %></span>
+            <%= f.hidden_field :space_listing_id, value:"#{@space_listing.id}" %>
+            <% end %>
+          </div>
+          <div class="col-md-6 col-xs-6">
+            <%= f.label :price, "Price: " %>
+            <%= f.text_field :price, disabled:true %>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-12 col-xs-6">
+            <%= f.submit "Book Now", class:"btn btn-success btn-block" %>
+          </div>
+        </div>
+        <br>
+        <% end %>
       </div>
     </div>
-
-    <div class="col-md-3 col-xs-6">
-      <%= f.label :move_out, "Move Out" %>
-      <div class="input-group date mg-check-in focus">
-        <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-        <%= f.text_field :move_out, class:"form-control input-group date", "data-provide"=>"datepicker", placeholder:"mm/dd/yyyy"%>
-      </div>
-    </div>
-
   </div>
-  <br>
-  <% if @space_listing %>
-  <span>Monthly rent: $</span><span id="monthly_rent"><%= @space_listing.monthly_rent %></span>
-  <br>
-  <span>Day rent: $</span><span id="day_rent"><%= @space_listing.day_rent %></span>
-  <%= f.hidden_field :space_listing_id, value:"#{@space_listing.id}" %>
-  <% end %>
-  <div class="row">
-    <div class="col-md-3 col-xs-6">
-      <%= f.label :price, "Price" %>
-      <%= f.text_field :price, disabled:true %>
-      <br>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3 col-xs-6">
-      <%= f.submit "Book Now", class:"btn btn-success btn-block" %>
-    </div>
-  </div>
-<% end %>
-
-</div>
-</div>
 </div>
