--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,3 +22,8 @@ h2 {
 .card-1:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+
+.input-group-addon {
+  border: 3px solid #EEE;
+  border-radius: 8px;
+}
