Fix booking, don't allow booked dates

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -36,7 +36,7 @@
             <%= f.label :price, "Price: " %>
             <div class="input-group">
               <span class="input-group-addon">$</span>
-              <%= f.text_field :price, disabled:true, class:"form-control", 'aria-label':'Amount (to the nearest dollar)' %>
+              <%= f.text_field :price, disabled:false, class:"form-control", 'aria-label':'Amount (to the nearest dollar)' %>
             </div>
           </div>
         </div>
