--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -2,6 +2,21 @@
   <div class="container">
     <div class="row">
       <div class="inner_container">
+        <%= form_tag charges_path do %>
+        <article>
+          <label class="amount">
+            <span>Price: $<%= @booking.price %></span>
+          </label>
+        </article>
+        <%= hidden_field_tag 'booking_id', @booking.id %>
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+        data-description=<%= @booking.space_listing.title %>
+        data-amount=<%= @booking.price %>
+        data-locale="auto">
+        </script>
+        <% end %>
+        <br>
         <h2>Booking Request Sent</h2>
         <p>Your booking is now pending and host needs to approve your request.</p>
         <div class="row">
@@ -9,7 +24,6 @@
             <%= link_to "View your rented spaces request", your_rented_spaces_path, class:"btn btn-success btn-block" %>
           </div>
         </div>
-        <br>
       </div>
     </div>
   </div>
