--- a/app/views/space_listings/list_view.html.erb
+++ b/app/views/space_listings/list_view.html.erb
@@ -50,7 +50,7 @@
                   <span>For Rent</span>
                 </div>
                 <div class="property-footer">
-                  <a href="#" title="Add to favorite"><i class="fa fa-heart"></i></a>
+                  <a data-method="patch" href="/space_listings/{{space_listing.id}}/toggle_favorite" title="Add to favorite"><i class="fa fa-heart"></i></a>
                   <a href="#" title="Contact Agent"><i class="fa fa-envelope"></i></a>
                 </div>
               </div>
