Add user to remove the favorite from Favorites list

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,6 +23,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "View Listings", space_listings_path %></li>
                 <li><%= link_to "Add Listing", new_space_listing_path %></li>
+                <li><%= link_to "Favorite Listings", favorites_path %></li>
               </ul>
           </li>
           <li class="dropdown">
