Add the view listings and map listing on navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,8 @@
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Listings <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "View Listings", space_listings_path %></li>
+                <li><%= link_to "View Listings", list_view_path %></li>
+                <li><%= link_to "Map of Listings", space_listings_path %></li>
                 <li><%= link_to "Add Listing", new_space_listing_path %></li>
                 <li><%= link_to "Favorite Listings", favorites_path %></li>
               </ul>
