--- a/app/views/space_listings/edit.html.erb
+++ b/app/views/space_listings/edit.html.erb
@@ -1,1 +1,11 @@
-<%= render "layouts/forms" %>
+<div id="content">
+  <div class="container">
+    <div class="inner_container">
+      <h1>Edit Space Listing</h1>
+
+      <%= render "layouts/forms" %>
+
+      <%= link_to 'Back', space_listings_path %>
+    </div>
+  </div>
+</div>
